hide admin elements and fix vertical alignment in list

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -303,6 +303,14 @@ main {
     position: relative;
 }
 
+.link-list li a .badges:empty {
+    display: none;
+}
+
+.link-list li a:has(.badges:empty) {
+    justify-content: center;
+}
+
 .link-list li a .badges {
     display: flex;
     gap: 6px;
